# tail

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs  main.rs
src/config/: config.rs
src/routes/: index.rs  mod.rs
