[package]
name = "tail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
tokio = { version = "1.34", features = ["full"] }

log = "0.4.20"
env_logger = "0.10.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

toml = "0.8.8"

clap = { version = "4.4.8", features = ["derive"] }

sea-orm = { version = "0.12.6", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
